tests/paczka1/small_fuzzy/93126634.err
Error in line 3: 0wp5 S950 78,2
Error in line 12: 0wp5 A325 42,5
